# rocket-template-tera

./: Cargo.toml  README.md  Rocket.toml
.github/workflows/: rust.yml
public/: package-lock.json  package.json  tailwind.config.js
public/html/: index.html.tera
public/html/components/: base.html.tera
src/: main.rs
