[package]
authors = [""]
edition = "2021"
name = "rocket-template"
version = "0.1.0"

[dependencies]
askama = { git = "https://github.com/djc/askama.git", rev = "8142963", features = [
    "config",
    "with-rocket",
    "mime",
    "mime_guess",
] }
askama_rocket = { git = "https://github.com/djc/askama.git", rev = "8142963" }
rocket = "0.5.0-rc.2"

[build-dependencies]
npm_rs = "1.0.0"
