[package]
authors = [""]
edition = "2021"
name = "rocket-template"
version = "0.1.0"

[dependencies]
rocket = { version = "0.5.0-rc.3", features=["json"]}
ubyte = "0.10" # Para obtener la última versión y evitar el warning del codigo rechazaro de la v0.10.1

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["tera"]

[build-dependencies]
npm_rs = "1"
